# Kleincomputer

./: README.md  read.me
AC1/PicoAC1/: Bedienung.md  README.md  ToDo.md  changelog.md
AC1/PicoAC1/AC1-Software/: Readme.md
AC1/PicoAC1/AC1-Software/MiniBasic/: Readme.md
AC1/PicoAC1/AC1-Software/Spiele_MC/: HOTCYCLE  SCHACH.CM  Snake  ghosttown
AC1/PicoAC1/Case/: Readme.md  backpanel.stl  foot.stl  frontpanel.stl  frontpanel_closed.stl  lowershell.stl  nutcap.stl  uppershell.stl
AC1/PicoAC1/EPROM/: Readme.md  picoMon_all_1.0.2.hex
AC1/PicoAC1/EPROM/MonX_3.1/: monx_0.9_org_0x800.bin.old  monx_1.0.1_org_0x800.bin.old
AC1/PicoAC1/Keyboard/: Readme.md  Scan2ASCII.ods
AC1/PicoAC1/PCB/: Readme.md
AC1/PicoAC1/Pico/: Readme.md
AC1/PicoAC1/Pico/source/picoVDU/: CMakeLists.txt  ac1_graphics.c  ac1_graphics.h  ac1_interface.h  ac1_picom.c  ac1_picom.h  ac1_statusline.c  ac1_statusline.h  ac1_zg_10x14.h  ac1_zg_10x15.h.old  ac1_zg_6x8.h  ac1_zg_9x12.h  main.c  scch_zg_10x14.h  scch_zg_6x8.h  scch_zg_9x12.h
AC1/PicoAC1/Pico/source/pico_IO/: CMakeLists.txt  ac1_config.c  ac1_config.h  ac1_help.h  ac1_interface.h  ac1_miba.h  ac1_picom.c  ac1_picom.h  ac1_printfile.c  ac1_printfile.h  ac1_rtc.c  ac1_rtc.h  ac1_sdcard.c  ac1_sdcard.h  ac1_usb_kbd.c  ac1_usb_scan_to_ascii .h.bk1  ac1_usb_scan_to_ascii.h  ac1_zcom.c  ac1_zcom.h  hw_config.c  main.c  zcom.pio
KC85/Grundgerät/D008/: Stückliste-D008v1.xls
KC85/Module/M061/: m061_prog_8255.odt
KC85/Module/M062.2/: README.md
KC85/OS/MLDOS/: MLDOS9FD.IMG  MLDOS9FD.TD0  format35.com  ml-dos.td0  sysgen24.com
KC85/OS/MicroDOS/: KC85MICR.TD0
KC87/: Readme.md
KC87/RAF2008_Umbau/: RAF2008.EQN  Readme.md
KC87/RAF2008_Umbau/RAF512_Prüf/: RAFAD12  RAFASM7  RAFCPM.COM  RAFCPMP.COM  RAFMAC1.MAC  RAFMAC2.MAC
KC87/RAF2008_Umbau/prl2com/: Raf2x24O.mac  Rafbic.mac  Rafcpmp.mac  liesmich  make.cmd  prl2com.com  prl2com.mac  prl2com.prn  prlc2com.mac  raf2x24o.prn  rafbic.com  rafbic.prn  rafcpmp.com  rafcpmp.prn
KC87/RAF2008_Umbau/raft/: RAFPRUF6.docx
KC87/USB_CH376/CH376ram/: CH376-cache.lib  CH376.kicad_pcb  CH376.sch  CH376.xlsx  CH376.xml  Jumper.md  fp-info-cache
KC87/USB_CH376/PLD/: CH376_RR_2.PLD  CH376_RR_2.doc  CH376_RR_2.lst
KC87/z9001Mini/: Readme.md
Z1013/Backplane/Backplane/: Backplane-cache.lib  Backplane.csv  Backplane.kicad_pcb  Backplane.kicad_pcb-bak  Backplane.net  Backplane.pro  Backplane.sch  Backplane.sch-bak  Backplane.xlsx
Z1013/Basic/BasicROM 3/: BasicROM-cache.lib  BasicROM-rescue.lib  BasicROM.csv  BasicROM.kicad_pcb  BasicROM.kicad_pcb-bak  BasicROM.kicad_prl  BasicROM.kicad_pro  BasicROM.pro  BasicROM.sch  BasicROM.sch-bak  BasicROM.xlsx  BasicROM.xml  fp-info-cache  sym-lib-table
Z1013/CPM/scp64hp9/: SCP64HP9.z80
Z1013/CPM/z1013_cpa/: 00liesmich  boot1013.com  boot1013.z80  cpa_Z1013.com  cpa_Z1013.z80  z1013cpa.dsk
Z1013/CPM/z1013bios/: Z1013BIOS.MAC
Z1013/CPM/z1013bios12/: GIDEBIOS.ASM
Z1013/EA-Modul/EA-Modul/: EA-Modul-cache.lib  EA-Modul.kicad_pcb  EA-Modul.kicad_pcb-bak  EA-Modul.net  EA-Modul.pro  EA-Modul.sch  EA-Modul.sch-bak
Z1013/SD-Interface/: README.md
Z1013/SD-Interface/SD_RAM_ROM/: SD_RR-cache.lib  SD_RR.kicad_pcb  SD_RR.kicad_pcb-bak  SD_RR.pro  SD_RR.sch  SD_RR.sch-bak  Vorlage.kicad_pcb
Z1013/SD-Interface/cardreader/: README.md
Z1013/Z1013-128/: Jumper.txt
Z1013/Z1013-128/ATtinyDoku/: D103_V1.hex
Z1013/Z1013-128/zusatzplatine_doku_v1/: Stückliste Zusatz-01.xls  ZusatzplatineText.doc
(+539 files in other folders)
